# mixxx

./: meson.build  meson_options.txt
lib/: meson.build
lib/reverb/: meson.build
res/: meson.build
src/: meson.build
src/analyzer/: meson.build
src/analyzer/plugins/: meson.build
src/broadcast/: meson.build
src/control/: meson.build
src/controllers/: meson.build
src/controllers/bulk/: meson.build
src/controllers/delegates/: meson.build
src/controllers/hid/: meson.build
src/controllers/keyboard/: meson.build
src/controllers/midi/: meson.build
src/database/: meson.build
src/dialog/: meson.build
src/effects/: meson.build
src/effects/builtin/: meson.build  reverbeffect.h
src/effects/lv2/: meson.build
src/encoder/: meson.build
src/engine/: meson.build
src/engine/bufferscalers/: meson.build
src/engine/cachingreader/: meson.build
src/engine/channels/: meson.build
src/engine/controls/: meson.build
src/engine/effects/: meson.build
src/engine/filters/: meson.build
src/engine/sidechain/: meson.build
src/engine/sync/: meson.build
src/mixer/: meson.build
src/musicbrainz/: meson.build
src/preferences/: meson.build
src/preferences/dialog/: dlgpreferences.h  meson.build
src/proto/: meson.build
src/recording/: meson.build
src/skin/: meson.build
src/soundio/: meson.build
src/sources/: meson.build
src/sources/v1/: meson.build
src/test/: meson.build
src/track/: meson.build
src/util/: meson.build
src/util/battery/: meson.build
src/util/color/: meson.build
src/util/db/: meson.build
src/vinylcontrol/: meson.build
src/waveform/: meson.build
src/widget/: meson.build
subprojects/: .gitignore  libebur128.wrap
subprojects/benchmark/: meson.build
subprojects/fidlib/: meson.build
subprojects/gmock-1.7.0/: meson.build
subprojects/hidapi-0.8.0-rc1/: meson.build
subprojects/hidapi-0.8.0-rc1/hidtest/: hidtest.cpp
subprojects/pa-ringbuffer/: meson.build
subprojects/qm-dsp/: meson.build
subprojects/qm-dsp/base/: meson.build
subprojects/qm-dsp/dsp/: meson.build
subprojects/qm-dsp/dsp/chromagram/: meson.build
subprojects/qm-dsp/dsp/keydetection/: meson.build
subprojects/qm-dsp/dsp/mfcc/: meson.build
subprojects/qm-dsp/dsp/onsets/: meson.build
subprojects/qm-dsp/dsp/phasevocoder/: meson.build
subprojects/qm-dsp/dsp/rateconversion/: meson.build
subprojects/qm-dsp/dsp/rhythm/: meson.build
subprojects/qm-dsp/dsp/segmentation/: meson.build
subprojects/qm-dsp/dsp/signalconditioning/: meson.build
subprojects/qm-dsp/dsp/tempotracking/: meson.build
subprojects/qm-dsp/dsp/tonal/: meson.build
subprojects/qm-dsp/dsp/transforms/: meson.build
subprojects/qm-dsp/dsp/wavelet/: meson.build
subprojects/qm-dsp/ext/: meson.build
subprojects/qm-dsp/hmm/: meson.build
subprojects/qm-dsp/maths/: meson.build
subprojects/qm-dsp/thread/: meson.build
subprojects/qtscript-bytearray/: meson.build
subprojects/replaygain/: meson.build
subprojects/soundtouch/: meson.build
subprojects/xwax/: meson.build
