option('ENABLE_TESTS', type: 'boolean', value: false, description: 'Build tests executable')
option('ENABLE_HID', type: 'boolean', value: true, description: 'Use HID API with Mixxx')
option('FEATURE_LV2', type: 'boolean', value: false, description: 'Enable use of LV2 plugins as effects in Mixxx')
option('FEATURE_MP4', type:'boolean', value: false, description: 'Enable support for MP4/M4A tracks')
