
option('FEATURE_OPENGLES', type: 'boolean', value: false, description: 'Enable OpenGL ES 2.0 support (experimental)')
option('FEATURE_HSS1394', type: 'boolean', value: true, description: 'Enable HSS1394 MIDI device support (not on Linux)')
option('FEATURE_HID', type: 'boolean', value: true, description: 'Use HID API with Mixxx')
option('FEATURE_BULK', type: 'boolean', value: true, description: 'Enable USB Bulk controller support (only Linux)')
option('FEATURE_MAD', type: 'boolean', value: true, description: 'Use MAD MP3 decoder (not on OSX)')
option('FEATURE_COREAUDIO', type: 'boolean', value: true, description: 'Use CoreAudio MP3/AAC decoder (only OSX)')
option('FEATURE_MEDIAFOUNDATION', type: 'boolean', value: true, description: 'Use MediaFoundation AAC decoder plugin (only on Windows)')
option('FEATURE_VINYLCONTROL', type: 'boolean', value: true, description: 'Add Vinyl control feature')
option('FEATURE_MODPLUG', type: 'boolean', value: false, description: 'Enable libmodplug module tracker support')
option('FEATURE_FAAD', type: 'boolean', value: true, description: 'Use FAAD AAC audio file decoder (only on Linux)')
option('FEATURE_WAVEPACK', type: 'boolean', value: false, description: 'Enable WavPack file support')
option('FEATURE_LV2', type: 'boolean', value: false, description: 'Enable use of LV2 plugins as effects in Mixxx')
option('FEATURE_BATTERY', type:'boolean', value: true description: 'Enable battery meter support')
option('ENABLE_LOCALECOMPARE', type:'boolean', value: true, description: 'Enable locale-aware string comparison functions - only works with libsqlite3 and not Qt\'s SQL Lite plugin (only on Linux)')
option('ENABLE_QTKEYCHAIN', type:'boolean', value:false, description: 'Enable storing of credentials through Qt\'s Keychain')
option('ENABLE_PERFTOOLS', type: 'boolean', value: false, description: 'Use Google performance tools in mixxx-test')
option('ENABLE_PERFTOOLS_PROFILER', type: 'boolean', value: false, description: 'Use Google\'s CPU profiler')
option('ENABLE_ASMLIB', type:'boolean', value: false, description: 'Use Agner Fog\'s hand-optimized asmlib (http://www.agner.org/optimize/)')
option('ENABLE_BUILDTYPE', type:'boolean', value:false, description: 'Use build date/time (__DATE__ __TIME__)')
option('ENABLE_PROFILING', type:'boolean', value:false, description:'Enable profiling support through gprof')
option('FEATURE_BROADCASTING', type:'boolean', value:true, description: 'Enable broadcasting through Shoutcast')
option('FEATURE_OPUS', type:'boolean', value:true, description: 'Enable OPUS file support')
option('FEATURE_FFMPEG', type:'boolean', value:true, description: 'Enable FFMPEG input support')
option('ENABLE_TESTS', type: 'boolean', value: false, description: 'Build mixxx-test')
option('ENABLE_TEST_SUITE', type:'boolean', value:false, description: 'Enable test fixtures. Only has an effect if ENABLE_TESTS is set to true.')
option('TARGET_APPSTORE', type:'boolean', value:false, description: 'Target the macOS App Store')
