src_mixxx += files([
    './control.cpp',
    './controlaudiotaperpot.cpp',
    './controlbehavior.cpp',
    './controleffectknob.cpp',
    './controlencoder.cpp',
    './controlindicator.cpp',
    './controllinpotmeter.cpp',
    './controllogpotmeter.cpp',
    './controlmodel.cpp',
    './controlobjectscript.cpp',
    './controlpotmeter.cpp',
    './controlproxy.cpp',
    './controlpushbutton.cpp',
    './controlttrotary.cpp'
])
