src_mixxx += files([
    './colorjsproxy.cpp',
    './controller.cpp',
    './controllerdebug.cpp',
    './controllerengine.cpp',
    './controllerenumerator.cpp',
    './controllerinputmappingtablemodel.cpp',
    './controllerlearningeventfilter.cpp',
    './controllermanager.cpp',
    './controllermappingtablemodel.cpp',
    './controlleroutputmappingtablemodel.cpp',
    './controllerpresetfilehandler.cpp',
    './controllerpresetinfo.cpp',
    './controllerpresetinfoenumerator.cpp',
    './controlpickermenu.cpp',
    './dlgcontrollerlearning.cpp',
    './dlgprefcontroller.cpp',
    './dlgprefcontrollers.cpp',
    './learningutils.cpp',
    './softtakeover.cpp'
])
src_ui_files += files([
    './dlgprefcontrollerdlg.ui',
    './dlgcontrollerlearning.ui',
    './dlgprefcontrollersdlg.ui'
])

# TODO: only include subdirs if feature is enabled
subdir('bulk')
subdir('delegates')
subdir('hid')
subdir('keyboard')
subdir('midi')
