src_mixxx += files([
    './effectbuttonparameterslot.cpp',
    './effectchain.cpp',
    './effectchainmanager.cpp',
    './effectchainslot.cpp',
    './effect.cpp',
    './effectmanifest.cpp',
    './effectmanifestparameter.cpp',
    './effectparameter.cpp',
    './effectparameterslotbase.cpp',
    './effectparameterslot.cpp',
    './effectrack.cpp',
    './effectsbackend.cpp',
    './effectslot.cpp',
    './effectsmanager.cpp'
])

subdir('builtin')
subdir('lv2')
