src_mixxx += files([
    './encoderbroadcastsettings.cpp',
    './encoder.cpp',
    './encoderffmpegcore.cpp',
    './encoderffmpegmp3.cpp',
    './encoderffmpegresample.cpp',
    './encoderffmpegvorbis.cpp',
    './encoderflacsettings.cpp',
    './encodermp3.cpp',
    './encodermp3settings.cpp',
    './encoderopus.cpp',
    './encoderopussettings.cpp',
    './encodersndfileflac.cpp',
    './encodervorbis.cpp',
    './encodervorbissettings.cpp',
    './encoderwave.cpp',
    './encoderwavesettings.cpp'
])
