src_mixxx += files([
    './broadcastprofile.cpp',
    './broadcastsettings_legacy.cpp',
    './broadcastsettings.cpp',
    './configobject.cpp',
    './dlgpreferencepage.cpp',
    './effectsettingsmodel.cpp',
    './replaygainsettings.cpp',
    './settingsmanager.cpp',
    './upgrade.cpp'
])

subdir('dialog')
