src_mixxx += files([
    './albuminfo.cpp',
    './beatfactory.cpp',
    './beatgrid.cpp',
    './beatmap.cpp',
    './beats.cpp',
    './beatutils.cpp',
    './bpm.cpp',
    './cue.cpp',
    './globaltrackcache.cpp',
    './keyfactory.cpp',
    './keys.cpp',
    './keyutils.cpp',
    './playcounter.cpp',
    './replaygain.cpp',
    './track.cpp',
    './trackinfo.cpp',
    './trackmetadata.cpp',
    './trackmetadatataglib.cpp',
    './tracknumbers.cpp',
    './trackrecord.cpp',
    './trackref.cpp'
])
