src_mixxx += files([
    './audiosignal.cpp',
    './autohidpi.cpp',
    './cmdlineargs.cpp',
    './console.cpp',
    './desktophelper.cpp',
    './dnd.cpp',
    './duration.cpp',
    './experiment.cpp',
    './file.cpp',
    './fpclassify.cpp',
    './indexrange.cpp',
    './logger.cpp',
    './logging.cpp',
    './mac.cpp',
    './movinginterquartilemean.cpp',
    './performancetimer.cpp',
    './readaheadsamplebuffer.cpp',
    './rlimit.cpp',
    './rotary.cpp',
    './samplebuffer.cpp',
    './sample.cpp',
    './sandbox.cpp',
    './screensaver.cpp',
    './sleepableqthread.cpp',
    './stat.cpp',
    './statmodel.cpp',
    './statsmanager.cpp',
    './tapfilter.cpp',
    './task.cpp',
    './threadcputimer.cpp',
    './time.cpp',
    './timer.cpp',
    './valuetransformer.cpp',
    './version.cpp',
    './widgethider.cpp',
    './widgetrendertimer.cpp',
    './workerthread.cpp',
    './workerthreadscheduler.cpp',
    './xml.cpp'
])

subdir('battery')
subdir('color')
subdir('db')
