src_mixxx += files([
    './enginefilterbessel4.cpp',
    './enginefilterbessel8.cpp',
    './enginefilterbiquad1.cpp',
    './enginefilterbutterworth4.cpp',
    './enginefilterbutterworth8.cpp',
    './enginefilter.cpp',
    './enginefilterlinkwitzriley2.cpp',
    './enginefilterlinkwitzriley4.cpp',
    './enginefilterlinkwitzriley8.cpp',
    './enginefiltermoogladder4.cpp'
])
