src_mixxx += files([
    './dlgprefautodj.cpp'
    './dlgprefbeats.cpp'
    './dlgprefbroadcast.cpp'
    './dlgprefcrossfader.cpp'
    './dlgprefdeck.cpp'
    './dlgprefeffects.cpp'
    './dlgprefeq.cpp'
    './dlgpreferences.cpp'
    './dlgprefinterface.cpp'
    './dlgprefkey.cpp'
    './dlgpreflibrary.cpp'
    './dlgpreflv2.cpp'
    './dlgprefmodplug.cpp'
    './dlgprefnovinyl.cpp'
    './dlgprefrecord.cpp'
    './dlgprefreplaygain.cpp'
    './dlgprefsound.cpp'
    './dlgprefsounditem.cpp'
    './dlgprefvinyl.cpp'
    './dlgprefwaveform.cpp'
])

src_ui_files += files([
    './dlgprefautodjdlg.ui'
    './dlgprefbeatsdlg.ui'
    './dlgprefbroadcastdlg.ui'
    './dlgprefcrossfaderdlg.ui'
    './dlgprefdeckdlg.ui'
    './dlgprefeffectsdlg.ui'
    './dlgprefeqdlg.ui'
    './dlgpreferencesdlg.ui'
    './dlgprefinterfacedlg.ui'
    './dlgprefkeydlg.ui'
    './dlgpreflibrarydlg.ui'
    './dlgpreflv2dlg.ui'
    './dlgprefmodplugdlg.ui'
    './dlgprefnovinyldlg.ui'
    './dlgprefrecorddlg.ui'
    './dlgprefreplaygaindlg.ui'
    './dlgprefsounddlg.ui'
    './dlgprefsounditem.ui'
    './dlgprefvinyldlg.ui'
    './dlgprefwaveformdlg.ui'
])
